# notebooks

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.pre-commit/: add_metadata.py
dev/: Ternary_plots.ipynb
notebooks/: A_quick_Python_tutorial.ipynb  Contour_a_map.ipynb  Custom_colormaps_for_Matplotlib.ipynb  Custom_colormaps_for_matplotlib.ipynb  Impact_crater_probability.ipynb  Physical_units_with_Pint.ipynb  Validating_DataFrames_with_Pandera.ipynb
