[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pandera>=0.24.0",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "nbformat>=5.10.4",
    "pre-commit>=4.2.0",
    "pyyaml>=6.0.2",
]
