[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "basemap>=2.0.0",
    "bruges>=0.5.4",
    "cartopy>=0.24.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "obspy>=1.4.2",
    "pandas>=2.3.0",
    "pandera>=0.24.0",
    "pint>=0.24.4",
    "pint-pandas>=0.7.1",
    "plotly-express>=0.4.1",
    "python-ternary>=1.0.8",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "uncertainties>=3.2.3",
]

[dependency-groups]
dev = [
    "nbformat>=5.10.4",
    "pre-commit>=4.2.0",
    "pyyaml>=6.0.2",
]
